kubernetes/apps/base/tools/copyparty/ingress.yaml
# Copyparty Ingress
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: copyparty
  namespace: tools
  labels:
    app.kubernetes.io/name: copyparty
  annotations:
    kubernetes.io/ingress.class: cilium
spec:
  tls:
    - hosts:
        - copyparty.home-infra.net
      secretName: wildcard-home-infra-net-tls
  rules:
    - host: copyparty.home-infra.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: copyparty
                port:
                  number: 80
